# voxelux

./: .gitignore  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  LAYOUT_ANALYSIS.md  README.md  imgui.ini  voxelux_complete_styles.md
assets/styles/: blender_dark.qss  colors.json  typography.json
docs/: PROJECT_STRUCTURE.md  dock_system_architecture.md  ghost_trackpad_study.md  styling_system_architecture.md  styling_system_examples.md  theme_system_proposal.md  viewport_navigation_report.md  widget_style_system.md
examples/: styled_widget_demo.cpp
include/: stb_image.h  text_renderer.h  theme.h  typography.h  view_animation.h  viewport_nav_widget.h  viewport_widget.h
include/archive/: README.md  text_renderer.h  theme.h  typography.h  viewport_nav_widget.h
include/canvas_ui/: camera_3d.h  canvas_core.h  canvas_region.h  canvas_renderer.h  canvas_window.h  dock_column.h  dock_container.h  drag_manager.h  editor_split_view.h  event_router.h  floating_window.h  font_metrics.h  font_system.h  grid_3d_renderer.h  icon_system.h  layout_builder.h  navigation_widget.h  polyline_shader.h  render_block.h  scaled_theme.h  styled_widget.h  styled_widgets.h  styled_widgets_complex.h  styled_widgets_core.h  styled_widgets_form.h  ui_widgets.h  viewport_3d_editor.h  viewport_navigation_handler.h  viewport_navigator.h  voxelux_layout.h  widget_style.h
include/glad/: gl.h  glad.h
include/voxelux/core/: event.h  events.h  simple_event.h  vector3.h  voxel.h  voxel_grid.h
include/voxelux/platform/: native_input.h
lib/glad/src/: glad.c
lib/glad_old_3.3/include/glad/: gl.h
shaders/: fragment.frag  vertex.vert
shaders/grid/: grid.frag  grid.vert
src/: CMakeLists.txt  text_renderer.cpp  theme.cpp  typography.cpp  view_animation.cpp  view_animation.h  viewport_nav_widget.cpp  viewport_widget.cpp  voxelux_canvas.cpp  voxelux_opengl.cpp
src/archive/: README.md  text_renderer.cpp  viewport_nav_widget.cpp  voxelux_opengl.cpp
src/canvas_ui/: CMakeLists.txt  camera_3d.cpp  canvas_core.cpp  canvas_region.cpp  canvas_region_stub.cpp  canvas_renderer.cpp  canvas_window.cpp  dock_column.cpp  dock_container.cpp  drag_manager.cpp  editor_split_view.cpp  event_router.cpp  floating_window.cpp  font_metrics.cpp  font_system.cpp  grid_3d_renderer.cpp  icon_atlas.cpp  icon_system.cpp  navigation_widget.cpp  polyline_shader.cpp  render_block.cpp  styled_widget.cpp  ui_widgets.cpp  viewport_3d_editor.cpp  viewport_navigation_handler.cpp  viewport_navigator.cpp  voxelux_layout.cpp  widget_style.cpp
src/core/: CMakeLists.txt  voxel_grid.cpp
src/glad/: glad.c
src/platform/: CMakeLists.txt  native_input_macos.mm  native_input_stub.cpp
tests/: CMakeLists.txt  test_placeholder.cpp
